// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Default Button 1`] = `
<button
  className="btn btn__primary"
  disabled={false}
  type="submit"
>
  Primary
</button>
`;

exports[`Button component Disabled button type Button 1`] = `
<button
  className="btn btn__primary"
  disabled={true}
  type="button"
>
  Disabled
</button>
`;

exports[`Button component Secondary Button 1`] = `
<button
  className="btn btn__secondary"
  disabled={false}
  type="submit"
>
  Secondary
</button>
`;
